Flusspferd Change Log
=====================

Release 0.7
-----------

2009-06-12 Lower-case module names for included modules (it remains case-sensitive)
2009-06-12 FLUSSPFERD_MODULE_LOADER gets passed the context object as its second parameter

Releases 0.5, 0.5.1, 0.6
------------------------

There was no change log for these releases.