@@ -4,8 +4,11 @@ Flusspferd Change Log
 Release 0.7
 -----------
 
-2009-06-12 Lower-case module names for included modules (it remains case-sensitive)
-2009-06-12 FLUSSPFERD_MODULE_LOADER gets passed the context object as its second parameter
+2009-06-12:
+- Lower-case module names for included modules (it remains case-sensitive).
+- FLUSSPFERD_LOADER gets passed the context object as its second parameter.
+- Split FLUSSPFERD_LOADER into FLUSSPFERD_LOADER (2 parameters) and
+  FLUSSPFERD_LOADER_SIMPLE (1 parameter).
 
 Releases 0.5, 0.5.1, 0.6
 ------------------------
